feat: Add GraalVM native image support for Java API server
- Add native-maven-plugin profile for GraalVM compilation
- Enable GraalVM Reachability Metadata Repository for automatic reflection configs
- Add custom reflect-config.json for JDBI, Web3j, and ABI types
- Fix GoogleUserInfo to ignore unknown JSON fields from Google API
- Auto-detect native image runtime to disable virtual threads (unsupported)
- Update documentation with native image build instructions and performance notes

Native binary: ~108MB, startup ~100ms (vs ~2s on JVM)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>